8249749: modify a primitive array through a stream and a for cycle causes jre crash

Check align_to_ref for NULL early and bailout SuperWord optimization.

Reviewed-by: vlivanov, thartmann